Using auth0 for authentications

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "ci:vitest": "vitest"
     },
     "dependencies": {
+        "@auth0/nextjs-auth0": "^4.14.0",
         "@floating-ui/dom": "^1.7.4",
         "@tiptap/core": "^3.10.8",
         "@tiptap/extension-collaboration": "^3.10.7",
