--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "better-auth": "^1.4.7",
+        "mongodb": "^7.0.0",
         "next": "16.0.10",
         "react": "19.2.0",
         "react-dom": "19.2.0",
