--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     },
     "dependencies": {
         "better-auth": "^1.4.7",
+        "dashjs": "^5.1.0",
+        "ikaria.js": "^0.2.0",
         "mongodb": "^7.0.0",
         "next": "16.0.10",
         "react": "19.2.0",
