--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "dashjs": "^5.1.0",
         "ikaria.js": "^0.2.0",
         "mongodb": "^7.0.0",
+        "motion": "^12.23.26",
         "next": "16.0.10",
         "react": "19.2.0",
         "react-dom": "19.2.0",
