--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "@aws-sdk/s3-request-presigner": "^3.957.0",
         "better-auth": "^1.4.7",
         "dashjs": "^5.1.0",
-        "ikaria.js": "^0.2.0",
+        "ikaria.js": "0.2.1",
         "mongodb": "^7.0.0",
         "motion": "^12.23.26",
         "next": "16.0.10",
