--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
         "ci:vitest": "vitest"
     },
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.957.0",
-        "@aws-sdk/s3-request-presigner": "^3.957.0",
+        "aws4fetch": "^1.0.20",
         "better-auth": "^1.4.7",
         "dashjs": "^5.1.0",
         "ikaria.js": "0.2.1",
