--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "copy-deps": "cp node_modules/ikaria.js/dist/assets/* .next/dev/static/media/",
         "dev": "next dev",
         "build": "next build",
-        "build-sw": "rm -rf dist && vite build",
+        "build-sw": "rm -rf dist && vite build && mv dist/sw.mjs public/sw.js",
         "start": "next start",
         "lint": "biome check",
         "format": "biome format --write",
