--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "ci:vitest": "vitest"
     },
     "dependencies": {
+        "@tabler/icons-react": "^3.36.0",
         "aws4fetch": "^1.0.20",
         "better-auth": "^1.4.7",
         "dashjs": "^5.1.0",
