--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "copy-deps": "cp node_modules/ikaria.js/dist/assets/* .next/dev/static/media/",
         "dev": "next dev",
-        "build": "next build",
+        "build": "pnpm build-sw && next build && cp node_modules/ikaria.js/dist/assets/* .next/static/media/",
         "build-sw": "rm -rf dist && vite build && mv dist/sw.mjs public/sw.js",
         "start": "next start",
         "lint": "biome check",
