--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "copy-deps": "cp node_modules/ikaria.js/dist/assets/* .next/dev/static/media/",
+        "copy-deps": "echo done.",
         "dev": "next dev",
-        "build": "pnpm build-sw && next build && cp node_modules/ikaria.js/dist/assets/* .next/static/media/",
+        "build": "pnpm build-sw && next build",
         "build-sw": "rm -rf dist && vite build && mv dist/sw.mjs public/sw.js",
         "start": "next start",
         "lint": "biome check",
@@ -18,7 +18,7 @@
         "better-auth": "^1.4.10",
         "dashjs": "^5.1.1",
         "hash-wasm": "^4.12.0",
-        "ikaria.js": "0.2.1",
+        "ikaria.js": "0.3.0",
         "mongodb": "^7.0.0",
         "motion": "^12.23.26",
         "next": "16.1.1",
