--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "@tabler/icons-react": "^3.36.0",
         "aws4fetch": "^1.0.20",
         "better-auth": "^1.4.10",
-        "dashjs": "^5.1.1",
         "hash-wasm": "^4.12.0",
         "ikaria.js": "0.3.0",
         "mongodb": "^7.0.0",
@@ -24,6 +23,7 @@
         "next": "16.1.1",
         "react": "19.2.3",
         "react-dom": "19.2.3",
+        "shaka-player": "^4.16.13",
         "y-protocols": "^1.0.7",
         "yjs": "^13.6.29"
     },
