--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
         "ci:vitest": "vitest"
     },
     "dependencies": {
+        "@radix-ui/react-tabs": "^1.1.13",
         "@tabler/icons-react": "^3.36.0",
         "aws4fetch": "^1.0.20",
         "better-auth": "^1.4.10",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "hash-wasm": "^4.12.0",
         "ikaria.js": "0.3.0",
+        "lucide-react": "^0.562.0",
         "mongodb": "^7.0.0",
         "motion": "^12.23.26",
         "next": "16.1.1",
         "react": "19.2.3",
         "react-dom": "19.2.3",
         "shaka-player": "^4.16.13",
+        "tailwind-merge": "^3.4.0",
         "y-protocols": "^1.0.7",
         "yjs": "^13.6.29"
     },
@@ -34,6 +39,7 @@
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "tailwindcss": "^4",
+        "tw-animate-css": "^1.4.0",
         "typescript": "^5",
         "vite": "^7.3.1",
         "vitest": "^4.0.16"
