--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "ci:vitest": "vitest"
     },
     "dependencies": {
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
         "@radix-ui/react-tabs": "^1.1.13",
         "@tabler/icons-react": "^3.36.0",
         "aws4fetch": "^1.0.20",
