--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@tabler/icons-react": "^3.36.1",
         "aws4fetch": "^1.0.20",
         "better-auth": "^1.4.12",
+        "blurhash": "^2.0.5",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "hash-wasm": "^4.12.0",
