--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "blurhash": "^2.0.5",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "fast-blurhash": "^1.1.4",
         "hash-wasm": "^4.12.0",
         "ikaria.js": "0.3.0",
         "lucide-react": "^0.562.0",
