--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,20 +16,14 @@ jobs:
         permissions:
             contents: read
 
-        strategy:
-            matrix:
-                node-version: [22.x, 24.x]
-
         steps:
             - uses: actions/checkout@v6
 
-            - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v4
-              with:
-                  node-version: ${{ matrix.node-version }}
+            - name: Use Node.js
+              run: sudo snap install node --channel=24/stable --classic
 
             - name: Install pnpm
-              run: corepack disable && npm install -g pnpm
+              run: npm install -g pnpm
 
             - name: Install dependencies
               run: pnpm install
